--- a/src/classes/SAMP_WorkPartFactory.cls
+++ b/src/classes/SAMP_WorkPartFactory.cls
@@ -1,14 +1,14 @@
 @isTest
-public class SAMP_WorkPartFactory extends TEST_SObjectFactory {
+public class SAMP_WorkPartFactory extends F45_SObjectFactory {
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 	}; 
 	
-	public static List<Work_Part__c> createList(Work_Part__c template, Integer quantity, TEST_DummyInsertModeEnum insertMode){
+	public static List<Work_Part__c> createList(Work_Part__c template, Integer quantity, F45_DummyInsertModeEnum insertMode){
 		MockStrategyInterface strategy = new SessionInQuantityStrategy(template, quantity); 
-		return (List<Work_Part__c>) TEST_SObjectFactory.createList(strategy, insertMode); 
+		return (List<Work_Part__c>) F45_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Work_Part__c create(Work_Part__c template, TEST_DummyInsertModeEnum insertMode){
+	public static Work_Part__c create(Work_Part__c template, F45_DummyInsertModeEnum insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	}
@@ -20,10 +20,10 @@ public class SAMP_WorkPartFactory extends TEST_SObjectFactory {
 	}
 	
 	public static List<Work_Part__c> createList(
-			Work_Part__c template, Integer quantity, List<Product2> equipmentList, TEST_DummyInsertModeEnum insertMode
+			Work_Part__c template, Integer quantity, List<Product2> equipmentList, F45_DummyInsertModeEnum insertMode
 		){
 		MockStrategyInterface strategy = new nWorkPartPerEquipmentStrategy(template, quantity, equipmentList); 
-		List<Work_Part__c> workPartList = (List<Work_Part__c>) TEST_SObjectFactory.createList(strategy, insertMode);
+		List<Work_Part__c> workPartList = (List<Work_Part__c>) F45_SObjectFactory.createList(strategy, insertMode);
 		Integer i = 0;
 		for (Work_Part__c workPart : workPartList) {
 			workPart.equipment__r = equipmentList[i++];
@@ -31,7 +31,7 @@ public class SAMP_WorkPartFactory extends TEST_SObjectFactory {
 		return workPartList;
 	}	  
 
-	public static List<Work_Part__c> createList(Work_Part__c template, List<Product2> equipmentList, TEST_DummyInsertModeEnum insertMode){
+	public static List<Work_Part__c> createList(Work_Part__c template, List<Product2> equipmentList, F45_DummyInsertModeEnum insertMode){
 		return createList(template, 1, equipmentList, insertMode); 
 	}
  
