--- a/src/classes/SAMP_MaintenanceRequestFactory.cls
+++ b/src/classes/SAMP_MaintenanceRequestFactory.cls
@@ -1,22 +1,22 @@
 @isTest
-public class SAMP_MaintenanceRequestFactory extends TEST_SObjectFactory { 
+public class SAMP_MaintenanceRequestFactory extends F45_SObjectFactory { 
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 			'type' => 'Mechanical',
 			'status' => 'New',
 			'origin' => 'Phone'	
 	}; 
 	
-	public static List<Case> createList(Case template, Integer quantity, TEST_DummyInsertModeEnum insertMode){
+	public static List<Case> createList(Case template, Integer quantity, F45_DummyInsertModeEnum insertMode){
 		MockStrategyInterface strategy = new SessionInQuantityStrategy(template, quantity); 
-		return (List<Case>) TEST_SObjectFactory.createList(strategy, insertMode); 
+		return (List<Case>) F45_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Case create(Case template, TEST_DummyInsertModeEnum insertMode){
+	public static Case create(Case template, F45_DummyInsertModeEnum insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	}
 
-	public static Case create(TEST_DummyInsertModeEnum insertMode){
+	public static Case create(F45_DummyInsertModeEnum insertMode){
 		Integer quantity = 1;
 		return createList(new Case(), quantity, insertMode)[0];
 	}
@@ -30,11 +30,11 @@ public class SAMP_MaintenanceRequestFactory extends TEST_SObjectFactory {
 	public static Case createRealClosingMaintenanceRequest(String requestType) {
 		Case maintenanceRequestTemplate = new Case(
 			status = 'Closed', 
-			vehicle__c = TEST_VehicleFactory.create(TEST_DummyInsertModeEnum.REAL).id, 
-			equipment__c = TEST_EquipmentFactory.create(TEST_DummyInsertModeEnum.REAL).id, 
+			vehicle__c = F45_VehicleFactory.create(F45_DummyInsertModeEnum.REAL).id, 
+			equipment__c = F45_EquipmentFactory.create(F45_DummyInsertModeEnum.REAL).id, 
 			type = requestType
 		);
-		Case newMaintenanceRequest = create(maintenanceRequestTemplate, TEST_DummyInsertModeEnum.REAL);
+		Case newMaintenanceRequest = create(maintenanceRequestTemplate, F45_DummyInsertModeEnum.REAL);
 		Case closedMaintenanceRequest = [
 			SELECT id, isClosed, vehicle__c, equipment__c, type
 			FROM Case
