Added commentary and some other minor refactoring

--- a/src/classes/SAMP_MaintenanceRequestFactory.cls
+++ b/src/classes/SAMP_MaintenanceRequestFactory.cls
@@ -6,17 +6,17 @@ public class SAMP_MaintenanceRequestFactory extends F45_SObjectFactory {
 			'origin' => 'Phone'	
 	}; 
 	
-	public static List<Case> createList(Case template, Integer quantity, F45_DummyInsertModeEnum insertMode){
+	public static List<Case> createList(Case template, Integer quantity, F45_DummyInsertMode insertMode){
 		MockStrategyInterface strategy = new SessionInQuantityStrategy(template, quantity); 
 		return (List<Case>) F45_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Case create(Case template, F45_DummyInsertModeEnum insertMode){
+	public static Case create(Case template, F45_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	}
 
-	public static Case create(F45_DummyInsertModeEnum insertMode){
+	public static Case create(F45_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(new Case(), quantity, insertMode)[0];
 	}
@@ -30,11 +30,11 @@ public class SAMP_MaintenanceRequestFactory extends F45_SObjectFactory {
 	public static Case createRealClosingMaintenanceRequest(String requestType) {
 		Case maintenanceRequestTemplate = new Case(
 			status = 'Closed', 
-			vehicle__c = F45_VehicleFactory.create(F45_DummyInsertModeEnum.REAL).id, 
-			equipment__c = F45_EquipmentFactory.create(F45_DummyInsertModeEnum.REAL).id, 
+			vehicle__c = F45_VehicleFactory.create(F45_DummyInsertMode.REAL).id, 
+			equipment__c = F45_EquipmentFactory.create(F45_DummyInsertMode.REAL).id, 
 			type = requestType
 		);
-		Case newMaintenanceRequest = create(maintenanceRequestTemplate, F45_DummyInsertModeEnum.REAL);
+		Case newMaintenanceRequest = create(maintenanceRequestTemplate, F45_DummyInsertMode.REAL);
 		Case closedMaintenanceRequest = [
 			SELECT id, isClosed, vehicle__c, equipment__c, type
 			FROM Case
