--- a/src/classes/SAMP_VehicleFactory.cls
+++ b/src/classes/SAMP_VehicleFactory.cls
@@ -3,17 +3,17 @@ public class SAMP_VehicleFactory extends F45_SObjectFactory {
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 	}; 
 	
-	public static List<Vehicle__c> createList(Vehicle__c template, Integer quantity, F45_DummyInsertModeEnum insertMode){
+	public static List<Vehicle__c> createList(Vehicle__c template, Integer quantity, F45_DummyInsertMode insertMode){
 		MockStrategyInterface strategy = new VehicleInQuantityStrategy(template, quantity); 
 		return (List<Vehicle__c>) F45_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Vehicle__c create(Vehicle__c template, F45_DummyInsertModeEnum insertMode){
+	public static Vehicle__c create(Vehicle__c template, F45_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	}
 
-	public static Vehicle__c create(F45_DummyInsertModeEnum insertMode){
+	public static Vehicle__c create(F45_DummyInsertMode insertMode){
 		Vehicle__c template = new Vehicle__c(); 
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
