--- a/src/classes/SF45_WorkPartFactory.cls
+++ b/src/classes/SF45_WorkPartFactory.cls
@@ -1,5 +1,5 @@
 @isTest 
-public class SAMP_WorkPartFactory extends F45_SObjectFactory {
+public class SF45_WorkPartFactory extends F45_SObjectFactory {
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 	}; 
 	
