Refactoring for clarity and more notes

--- a/src/classes/SDAO_GenericDmlMock.cls
+++ b/src/classes/SDAO_GenericDmlMock.cls
@@ -1,5 +1,5 @@
 @isTest 
-public class DB_GenericDmlMock extends DB_GenericDml { 
+public class SDAO_GenericDmlMock extends SDAO_GenericDml { 
 	public List<SObject> insertedSObjectList {private set; get;}
 	
     public override void doInsert(List<SObject> objectList) {
