--- a/src/classes/SDAO_WorkPartSelector.cls
+++ b/src/classes/SDAO_WorkPartSelector.cls
@@ -1,4 +1,4 @@
-public virtual class DB_WorkPartSelector extends fflib_SObjectSelector {
+public virtual class SDAO_WorkPartSelector  {
 
     public List<Schema.SObjectField> getSObjectFieldList() {
         return new List<Schema.SObjectField>{
@@ -13,10 +13,7 @@ public virtual class DB_WorkPartSelector extends fflib_SObjectSelector {
     }
     
     public virtual List<Work_Part__c> selectByMaintenanceRequestIdWithEquipment(Set<Id> idSet) {
-        fflib_QueryFactory queryFactory = newQueryFactory();
-        new DB_EquipmentSelector().configureQueryFactoryFields(queryFactory, 'equipment__c');
-        return (List<Work_Part__c>) Database.query(
-                queryFactory.setCondition('maintenance_request__c IN :idSet').toSOQL()
-        );
+    	// TODO:
+    	return null;
     }  
 }
