--- a/src/classes/F45_DummyInsertMode.cls
+++ b/src/classes/F45_DummyInsertMode.cls
@@ -7,13 +7,7 @@
  *  Q: Why include both NONE and LATER values?
  *  A: Because it can be prove useful, either for tests which leverage F45, or for developers reading the source code.
  *
- *  Q: Have you ever used to LATER value?
- *  A: I don't recall.
- *  
- *  Q: Have you ever heard of YAGNI?
- *  A: I reserve the right to remain silent.
- *  
- *	Q: Can I used REAL in a unit test?
+ *	Q: Can I use REAL in a unit test?
  *  A: No, that would be an integration test.
  *
  *  Q: Can I mix REAL and MOCK values in the same test?
