--- a/src/classes/SDAO_GenericDml.cls
+++ b/src/classes/SDAO_GenericDml.cls
@@ -1,4 +1,4 @@
-public virtual class DB_GenericDml {
+public virtual class SDAO_GenericDml {
     public virtual void doInsert(List<SObject> objectList) {
     	insert objectList;
     }
