--- a/src/classes/SF45_WorkPartSelectorIntTest.cls
+++ b/src/classes/SF45_WorkPartSelectorIntTest.cls
@@ -1,16 +1,16 @@
 @isTest
-private class DB_WorkPartSelectorTest {
-	private static final User TestRunner = TEST_RunAsUserFactory.create(); 
+private class SF45_WorkPartSelectorIntTest {
+	private static final User TestRunner = F45_RunAsUserFactory.create(); 
 	
 	@isTest static void testSelectByMaintenanceRequestIdWithEquipmentShouldIncludeEquipment(){
 		// Arrange
-		DB_WorkPartSelector targetClass = new DB_WorkPartSelector();
+		SDAO_WorkPartSelector targetClass = new SDAO_WorkPartSelector();
 
 		Product2 equipmentTemplate = new Product2(maintenance_cycle__c = 5322);
-		Id testEquipmentId = TEST_EquipmentFactory.create(equipmentTemplate, TEST_DummyInsertModeEnum.REAL).id;
-		Id testMaintenanceRequestId = TEST_MaintenanceRequestFactory.create(TEST_DummyInsertModeEnum.REAL).id;  
+		Id testEquipmentId = SF45_ProductFactory.create(equipmentTemplate, F45_DummyInsertMode.REAL).id;
+		Id testMaintenanceRequestId = SF45_CaseFactory.create(F45_DummyInsertMode.REAL).id;  
 		Work_Part__c workPartTemplate = new Work_Part__c(equipment__c = testEquipmentId, maintenance_request__c = testMaintenanceRequestId); 
-		TEST_WorkPartFactory.create(workPartTemplate, TEST_DummyInsertModeEnum.REAL);
+		SF45_WorkPartFactory.create(workPartTemplate, F45_DummyInsertMode.REAL);
 		
 		Set<Id> maintenanceRequestIdSet = new Set<Id>{ testMaintenanceRequestId };
 		
