--- a/src/classes/SDAO_WorkPartSelector.cls
+++ b/src/classes/SDAO_WorkPartSelector.cls
@@ -1,19 +1,9 @@
 public virtual class SDAO_WorkPartSelector  {
-
-    public List<Schema.SObjectField> getSObjectFieldList() {
-        return new List<Schema.SObjectField>{
-                Work_Part__c.id,
-                Work_Part__c.equipment__c,
-                Work_Part__c.maintenance_request__c
-        };
-    }
-
-    public Schema.SObjectType getSObjectType() {
-        return Work_Part__c.sObjectType;
-    }
-    
     public virtual List<Work_Part__c> selectByMaintenanceRequestIdWithEquipment(Set<Id> idSet) {
-    	// TODO:
-    	return null;
+    	return [
+    		SELECT id, equipment__c, equipment__r.maintenance_cycle__c, maintenance_request__c
+    		FROM Work_Part__c
+    		WHERE maintenance_request__c IN :idSet
+    	];
     }  
 }
